added services images

--- a/index.html
+++ b/index.html
@@ -173,36 +173,36 @@
                 <h1 class="text-center pt-5 service_header">Services</h1>
 
                 <div class="row justify-content-around p-0 m-0 mt-5">
-                    <div class="col-3">
+                    <div class="col-4">
                         <div class="card">
                             <div class="card-body d-flex align-items-center">
                                 <img
                                     class="services_img"
-                                    src="./assets/4.jpg"
+                                    src="./assets/Turn key proj.jpg"
                                     alt=""
                                 />
                                 <p>Turnkey Projects</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <div class="card">
                             <div class="card-body d-flex align-items-center">
                                 <img
                                     class="services_img"
-                                    src="./assets/4.jpg"
+                                    src="./assets/IP Porting.jpg"
                                     alt=""
                                 />
                                 <p>IP Porting Projects</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <div class="card">
                             <div class="card-body d-flex align-items-center">
                                 <img
                                     class="services_img"
-                                    src="./assets/4.jpg"
+                                    src="./assets/IP Design.png"
                                     alt=""
                                 />
                                 <p>IP Design Expertise</p>
@@ -212,36 +212,36 @@
                 </div>
 
                 <div class="row justify-content-around p-0 m-0 mt-5">
-                    <div class="col-3">
+                    <div class="col-4">
                         <div class="card">
                             <div class="card-body d-flex align-items-center">
                                 <img
                                     class="services_img"
-                                    src="./assets/4.jpg"
+                                    src="./assets/PPA optimization.jpg"
                                     alt=""
                                 />
                                 <p>PPA Optimization</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <div class="card">
                             <div class="card-body d-flex align-items-center">
                                 <img
                                     class="services_img"
-                                    src="./assets/4.jpg"
+                                    src="./assets/R & D projects.jpg"
                                     alt=""
                                 />
                                 <p>R&D Projects</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-4">
                         <div class="card">
                             <div class="card-body d-flex align-items-center">
                                 <img
                                     class="services_img"
-                                    src="./assets/4.jpg"
+                                    src="./assets/Timing sign off.avif"
                                     alt=""
                                 />
                                 <p>Timing Sign Off flow</p>
