--- a/services.html
+++ b/services.html
@@ -88,17 +88,17 @@
             <div class="row align-items-center p-0 m-0">
                 <div class="col-md-4 mt-5">
                     <div class="card">
-                        <div class="card-body d-flex align-items-center">
+                        <div class="card-body align-items-center">
                             <img
                                 class="services_img"
-                                src="./assets/4.jpg"
+                                src="./assets/Turn key proj.jpg"
                                 alt=""
                             />
-                            <p>Turnkey Projects</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 mt-5">
+                    <h3 class="mb-3" >Turnkey Projects</h3>
                     <p>
                         Scratch development and complete solution for
                         conventional and nonconventional requirements
@@ -106,17 +106,17 @@
                 </div>
                 <div class="col-md-4 mt-5">
                     <div class="card">
-                        <div class="card-body d-flex align-items-center">
+                        <div class="card-body align-items-center">
                             <img
                                 class="services_img"
-                                src="./assets/4.jpg"
+                                src="./assets/IP Design.png"
                                 alt=""
                             />
-                            <p>IP Design Expertise</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 mt-5">
+                    <h3 class="mb-3" >IP Design Expertise</h3>
                     <p>
                         Silicon Proven Design services for SRAM IP and MRAM IP.
                     </p>
@@ -126,14 +126,14 @@
                         <div class="card-body d-flex align-items-center">
                             <img
                                 class="services_img"
-                                src="./assets/4.jpg"
+                                src="./assets/R & D projects.jpg"
                                 alt=""
                             />
-                            <p>R&D Projects</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 mt-5">
+                    <h3 class="mb-3" >R&D Projects</h3>
                     <p>
                         SRAM research and development for aggressive PPA
                         requirements.
@@ -144,14 +144,14 @@
                         <div class="card-body d-flex align-items-center">
                             <img
                                 class="services_img"
-                                src="./assets/4.jpg"
+                                src="./assets/PPA optimization.jpg"
                                 alt=""
                             />
-                            <p>PPA Optimization</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 mt-5">
+                    <h3 class="mb-3">PPA Optimization</h3>
                     <p>
                         SRAM development with Innovative solutions for
                         Performance and Power optimization.
@@ -162,14 +162,14 @@
                         <div class="card-body d-flex align-items-center">
                             <img
                                 class="services_img"
-                                src="./assets/4.jpg"
+                                src="./assets/Timing sign off.avif"
                                 alt=""
                             />
-                            <p>Timing Sign Off flow</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 mt-5">
+                    <h3 class="mb-3">Timing Sign Off flow</h3>
                     <p>
                         IP with custom and PNR blocks Timing sign Off (STA, GLS
                         and Dynamic Timing) solution with industry standard
