--- a/about.html
+++ b/about.html
@@ -18,10 +18,6 @@
         />
         <link rel="stylesheet" href="about.css" />
 
-        <link
-            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
-            rel="stylesheet"
-        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -56,14 +52,13 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="services.html">
+                                Services
+                            </a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="services.html"
-                                >Services</a
-                            >
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
-
                         <li class="nav-item ps-3 pe-3">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
@@ -78,7 +73,7 @@
 
         <section class="section_2 container mt-5">
             <div class="row align-items-center p-0 m-0">
-                <div class="col-md-4">
+                <div class="col-md-4 text-center">
                     <img
                         class="spin"
                         src="./assets//ppa_logo_small.png"
@@ -86,10 +81,8 @@
                     />
                 </div>
                 <div class="col-md-8 description ps-5">
-                    <h1 data-aos="fade-down">
-                        Who Are We <span class="yellow_color">?</span>
-                    </h1>
-                    <p data-aos="fade-up">
+                    <h1>Who Are We <span class="yellow_color">?</span></h1>
+                    <p>
                         We provide end-to-end semiconductor design services
                         Turnkey Projects, Innovative solution in design,
                         Compiler Development, Timing Sign Off, PPA optimization
@@ -102,7 +95,7 @@
         </section>
 
         <section class="section_3 text-center p-5 mt-5">
-            <h1 class="vision_header" data-aos="zoom-in">VISION</h1>
+            <h1 class="vision_header">VISION</h1>
             <p>
                 "Empowering the Future of Semiconductor Innovation with
                 Unmatched Power, Performance, and Area Efficiency"
@@ -110,91 +103,79 @@
         </section>
 
         <section class="section_4 container">
-            <div class="row">
-                <div class="col-4 border_leader"></div>
-                <div class="col-8 p-0 my-5">
-                    <h1 class="leadership_header px-5" data-aos="zoom-in">
-                        Leadership
-                    </h1>
-                    <div class="border_1"></div>
+            <div class="row m-0 p-0">
+                <div class="col-lg-4 col-md-5 border_leader"></div>
+                <div class="col-lg-8 col-md-7 p-0 border_mb">
+                    <h1 class="leadership_header px-5 mt-5">Leadership</h1>
+                    <div class="border_1 mb-5"></div>
                 </div>
-                <div class="col-4 border_leader text-end p-0 pb-5">
-                    <span
-                        data-aos="zoom-out-right"
-                        class="leader_name px-3 pb-1"
-                    >
-                        Biprangshu Saha
-                        <i class="fa-solid fa-circle-dot ms-3"></i>
-                    </span>
-                    <div class="border_2"></div>
+                <div
+                    class="col-lg-4 col-md-5 border_mb border_leader text-md-end p-0 pb-5"
+                >
+                    <span class="leader_name px-3 pb-1"> Biprangshu Saha </span>
+                    <div class="border_2 d-none d-md-block"></div>
+                    <div class="border_1 d-block d-md-none"></div>
                 </div>
-                <div class="col-8 pb-5">
+                <div class="border_mb col-lg-8 col-md-7 pb-5">
                     <ul>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             12+ years of Experience in custom design in ARM ,
                             NXP, AI, Numem, Rezonent and in other Startups for
                             turnkey projects
                         </li>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             Expertise in delivering design with best in class
                             PPA.
                         </li>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             Implemented several innovative designs in SRAM and
                             Analog ADC ( Patent Applied).
                         </li>
                     </ul>
                 </div>
-                <div class="col-4 border_leader text-end p-0 pb-5">
-                    <span
-                        data-aos="zoom-out-right"
-                        class="leader_name px-3 pb-1"
-                    >
+                <div
+                    class="col-lg-4 col-md-5 border_mb border_leader text-md-end p-0 pb-5"
+                >
+                    <span class="leader_name px-3 pb-1">
                         Avinash Rangapure
-                        <i class="fa-solid fa-circle-dot ms-3"></i>
                     </span>
-                    <div class="border_2"></div>
+                    <div class="border_2 d-none d-md-block"></div>
+                    <div class="border_1 d-block d-md-none"></div>
                 </div>
-                <div class="col-8 pb-5">
+                <div class="border_mb col-lg-8 col-md-7 pb-5">
                     <ul>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             10+ years of Experience in custom design and
                             characterization in ARM, AI, NUMEM and in other
                             Startups for turnkey projects.
                         </li>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             Expertise in setting up Methodologies/flow for
                             timing sign off for Complex custom blocks and
                             compiler flow Architect. STA back annotation.
                         </li>
-                        <li data-aos="zoom-in-left">
-                            Standard cell design, deliverables and flow.
-                        </li>
+                        <li>Standard cell design, deliverables and flow.</li>
                     </ul>
                 </div>
-
-                <div class="col-4 border_leader text-end p-0 pb-5">
-                    <span
-                        data-aos="zoom-out-right"
-                        class="leader_name px-3 pb-1"
-                    >
-                        Rohith Kumar <i class="fa-solid fa-circle-dot ms-3"></i>
-                    </span>
-                    <div class="border_2"></div>
+                <div
+                    class="col-lg-4 col-md-5 border_mb border_leader text-md-end p-0 pb-5"
+                >
+                    <span class="leader_name px-3 pb-1"> Rohith Kumar </span>
+                    <div class="border_2 d-none d-md-block"></div>
+                    <div class="border_1 d-block d-md-none"></div>
                 </div>
-
-                <div class="col-8 pb-5">
+                <div class="border_mb col-lg-8 col-md-7 pb-5">
                     <ul>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             10+ years of Experience in custom design and
                             verification in Qualcomm, Samsung, Numem different
                             Startups for turnkey projects.
                         </li>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             Expertise in Design, verification and quality
                             checks.
                         </li>
-                        <li data-aos="zoom-in-left">
+                        <li>
                             Function verification through UVM, Formal
                             Verification by ESPCV, VCD to Spice verification.
                         </li>
@@ -205,28 +186,26 @@
 
         <section class="section_5 py-5">
             <div class="container">
-                <h1 class="vision_header text-center" data-aos="zoom-in">
-                    Customers
-                </h1>
+                <h1 class="vision_header text-center mb-3">Customers</h1>
 
                 <div
                     class="row align-items-center justify-content-around p-0 m-0"
                 >
-                    <div class="col-3 text-center" data-aos="zoom-in-up">
+                    <div class="col-md-3 mb-3 text-center">
                         <img
                             class="customer_img"
                             src="./assets/numem.png"
                             alt=""
                         />
                     </div>
-                    <div class="col-3 text-center" data-aos="zoom-in-up">
+                    <div class="col-md-3 mb-3 text-center">
                         <img
                             class="customer_img"
                             src="./assets/exiger.jpg"
                             alt=""
                         />
                     </div>
-                    <div class="col-3 text-center" data-aos="zoom-in-up">
+                    <div class="col-md-3 mb-3 text-center">
                         <img
                             class="customer_img"
                             src="./assets/HHigh.png"
@@ -239,19 +218,19 @@
 
         <section class="section_6 container">
             <div class="row align-items-center p-0 m-0">
-                <div class="col-md-4 py-5 text-center">
+                <div class="col-md-4 py-3 py-md-5 text-center">
                     <h1 class="vision_header">Team</h1>
                 </div>
-                <div class="col-md-8 py-5">
+                <div class="col-md-8 py-3 py-md-5">
                     20+ Team of very focused and specialised team for Design and
                     Verification.
                 </div>
             </div>
         </section>
 
-        <footer class="p-5">
+        <footer class="px-5">
             <div class="row justify-content-around">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-5 mt-5">
                     <img class="logo" src="./assets/ppa_footer_logo.jpg" />
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
@@ -281,7 +260,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 mb-5 mt-5">
                     <h3>Links</h3>
                     <ul>
                         <li>
@@ -305,7 +284,7 @@
                     </ul>
                 </div>
 
-                <form id="emailForm" class="col-md-4">
+                <form id="emailForm" class="col-md-4 mb-5 mt-5">
                     <h3>CONTACT US</h3>
 
                     <div class="mb-3">
@@ -342,10 +321,7 @@
             </div>
         </footer>
 
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
-            AOS.init();
-
             document.addEventListener("DOMContentLoaded", function () {
                 var emailForm = document.getElementById("emailForm");
 
