--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,6 @@
         />
         <link rel="stylesheet" href="contact.css" />
 
-        <link
-            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
-            rel="stylesheet"
-        />
-
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -57,14 +52,13 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="services.html">
+                                Services
+                            </a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="services.html"
-                                >Services</a
-                            >
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
-
                         <li class="nav-item ps-3 pe-3">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
@@ -75,7 +69,7 @@
 
         <section class="section_1">
             <div class="row justify-content-end p-0 m-0">
-                <form class="col-6 form me-5 " id="emailForm">
+                <form class="col-6 form me-5" id="emailForm">
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
                         <span class="">
@@ -132,9 +126,9 @@
             </div>
         </section>
 
-        <footer class="p-5">
+        <footer class="px-5">
             <div class="row justify-content-around">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-5 mt-5">
                     <img class="logo" src="./assets/ppa_footer_logo.jpg" />
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
@@ -164,7 +158,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 mb-5 mt-5">
                     <h3>Links</h3>
                     <ul>
                         <li>
@@ -188,35 +182,31 @@
                     </ul>
                 </div>
 
-                <div class="col-md-4">
+                <form id="emailForm" class="col-md-4 mb-5 mt-5">
                     <h3>CONTACT US</h3>
 
                     <div class="mb-3">
                         <input
-                            type="email"
                             class="form-control"
-                            id=""
-                            placeholder="name@example.com"
-                        />
-                    </div>
-                    <div class="mb-3">
-                        <input
+                            placeholder="Name"
                             type="text"
-                            class="form-control"
-                            id=""
-                            placeholder="name"
+                            id="name"
+                            name="name"
+                            required
                         />
                     </div>
                     <div class="mb-3">
                         <textarea
-                            placeholder="message"
                             class="form-control"
-                            id=""
-                            rows="3"
+                            placeholder="Message"
+                            id="body"
+                            name="body"
+                            rows="4"
+                            required
                         ></textarea>
                     </div>
                     <div>
-                        <button class="btn btn-dark">Send</button>
+                        <button type="submit" class="btn btn-dark">Send</button>
                     </div>
 
                     <!-- <div class="social text-center">
@@ -225,14 +215,11 @@
                         <i class="fa-brands fa-instagram"></i>
                         <i class="fa-brands fa-linkedin-in"></i>
                     </div> -->
-                </div>
+                </form>
             </div>
         </footer>
 
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
-            AOS.init();
-
             document.addEventListener("DOMContentLoaded", function () {
                 var emailForm = document.getElementById("emailForm");
 
