--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="style.css" />
-        <link
-            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
-            rel="stylesheet"
-        />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -57,14 +53,13 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="services.html">
+                                Services
+                            </a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="services.html"
-                                >Services</a
-                            >
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
-
                         <li class="nav-item ps-3 pe-3">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
@@ -74,43 +69,25 @@
         </nav>
 
         <section class="section_1">
-            <div class="row justify-content-center align-items-center p-0 m-0">
-                <div class="col-4 p-0 text-center">
+            <div class="row align-items-center p-0 m-0">
+                <div class="col-4 col-lg-3 col-md-4 p-0 text-center">
                     <img
                         class="spin"
                         src="./assets//ppa_logo_small.png"
                         alt=""
                     />
                 </div>
-                <div class="col-7 p-0 grey_border">
+                <div class="col-7 col-lg-5 col-md-7 p-0 grey_border">
                     <div class="logo_header">+PPA</div>
                     <div class="logo_header">NANOCHIP</div>
-                    <!-- <img
-                        class="text_logo"
-                        src="./assets/text_logo.jpg"
-                        alt=""
-                    /> -->
                 </div>
             </div>
-
-            <!-- <img
-                class="main_banner"
-                src="./assets/ppa_logo.jpg"
-                alt=""
-                srcset=""
-            /> -->
         </section>
 
         <section class="section_2 container">
             <div class="row align-items-center p-0 m-0">
                 <div class="col-md-4 p-0 border_right">
-                    <img
-                        data-aos="fade-right"
-                        data-aos-anchor-placement="top-center"
-                        src="./assets/power.gif"
-                        class="gifs"
-                        alt=""
-                    />
+                    <img src="./assets/power.gif" class="gifs" alt="" />
                 </div>
                 <div class="col-md-8 ps-5">
                     <h1 class="header m-0">POWER</h1>
@@ -134,23 +111,11 @@
                 </div>
 
                 <div class="col-md-4 p-0 text-end border_left">
-                    <img
-                        data-aos-anchor-placement="top-center"
-                        data-aos="fade-left"
-                        src="./assets/performance.gif"
-                        class="gifs"
-                        alt=""
-                    />
+                    <img src="./assets/performance.gif" class="gifs" alt="" />
                 </div>
 
                 <div class="col-md-4 p-0 border_right">
-                    <img
-                        data-aos-anchor-placement="top-center"
-                        data-aos="fade-right"
-                        src="./assets/area.gif"
-                        class="gifs"
-                        alt=""
-                    />
+                    <img src="./assets/area.gif" class="gifs" alt="" />
                 </div>
                 <div class="col-md-8 ps-5">
                     <h1 class="header m-0">AREA</h1>
@@ -164,7 +129,7 @@
         </section>
 
         <section class="section_3 text-center p-5 mt-5">
-            <h1 data-aos="zoom-in" class="mission_header">MISSION</h1>
+            <h1 class="mission_header">MISSION</h1>
             <p>
                 "Dedicated to optimizing Power, Performance, and Area metrics in
                 the Semiconductor and VLSI realm, we strive to empower our
@@ -177,14 +142,9 @@
             <section class="section_4 container">
                 <h1 class="text-center pt-5 service_header">Services</h1>
 
-                <div class="row justify-content-around p-0 m-0 mt-5">
-                    <div class="col-4">
-                        <div
-                            class="card"
-                            data-aos-anchor-placement="top-center"
-                            data-aos-duration="2000"
-                            data-aos="fade-right"
-                        >
+                <div class="row justify-content-around p-0 m-0">
+                    <div class="col-lg-4 col-md-6 mt-4">
+                        <div class="card">
                             <div
                                 class="card-body text-center align-items-center"
                             >
@@ -197,13 +157,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div
-                            class="card"
-                            data-aos-anchor-placement="top-center"
-                            data-aos-duration="2000"
-                            data-aos="fade-down"
-                        >
+                    <div class="col-lg-4 col-md-6 mt-4">
+                        <div class="card">
                             <div
                                 class="card-body text-center align-items-center"
                             >
@@ -216,13 +171,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div
-                            class="card"
-                            data-aos-anchor-placement="top-center"
-                            data-aos="fade-left"
-                            data-aos-duration="2000"
-                        >
+                    <div class="col-lg-4 col-md-6 mt-4">
+                        <div class="card">
                             <div
                                 class="card-body text-center align-items-center"
                             >
@@ -237,13 +187,8 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-around p-0 m-0 mt-5">
-                    <div
-                        class="col-4"
-                        data-aos-anchor-placement="top-center"
-                        data-aos-duration="2000"
-                        data-aos="fade-right"
-                    >
+                <div class="row justify-content-around p-0 m-0">
+                    <div class="col-lg-4 col-md-6 mt-4">
                         <div class="card">
                             <div
                                 class="card-body text-center align-items-center"
@@ -257,12 +202,7 @@
                             </div>
                         </div>
                     </div>
-                    <div
-                        class="col-4"
-                        data-aos-anchor-placement="top-center"
-                        data-aos-duration="2000"
-                        data-aos="fade-up"
-                    >
+                    <div class="col-lg-4 col-md-6 mt-4">
                         <div class="card">
                             <div
                                 class="card-body text-center align-items-center"
@@ -276,13 +216,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div
-                            class="card"
-                            data-aos-anchor-placement="top-center"
-                            data-aos-duration="2000"
-                            data-aos="fade-left"
-                        >
+                    <div class="col-lg-4 col-md-6 mt-4">
+                        <div class="card">
                             <div
                                 class="card-body text-center align-items-center"
                             >
@@ -299,9 +234,9 @@
             </section>
         </section>
 
-        <footer class="p-5">
+        <footer class="px-5">
             <div class="row justify-content-around">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-5 mt-5">
                     <img class="logo" src="./assets/ppa_footer_logo.jpg" />
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
@@ -331,7 +266,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 mb-5 mt-5">
                     <h3>Links</h3>
                     <ul>
                         <li>
@@ -355,7 +290,7 @@
                     </ul>
                 </div>
 
-                <form id="emailForm" class="col-md-4">
+                <form id="emailForm" class="col-md-4 mb-5 mt-5">
                     <h3>CONTACT US</h3>
 
                     <div class="mb-3">
@@ -392,10 +327,7 @@
             </div>
         </footer>
 
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
-            AOS.init();
-
             document.addEventListener("DOMContentLoaded", function () {
                 var emailForm = document.getElementById("emailForm");
 
