--- a/services.html
+++ b/services.html
@@ -18,10 +18,6 @@
         />
         <link rel="stylesheet" href="services.css" />
 
-        <link
-            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
-            rel="stylesheet"
-        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -56,14 +52,13 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="services.html">
+                                Services
+                            </a>
                         </li>
                         <li class="nav-item ps-3 pe-3">
-                            <a class="nav-link" href="services.html"
-                                >Services</a
-                            >
+                            <a class="nav-link" href="about.html">About Us</a>
                         </li>
-
                         <li class="nav-item ps-3 pe-3">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
@@ -73,24 +68,21 @@
         </nav>
 
         <section class="section_1">
-            <h1 class="main_header">Services</h1>
+            <h1 class="main_header">SERVICES</h1>
         </section>
 
         <section class="container section_2 text-center mt-5">
-            <div class="row justify-content-center p-0 m-0">
-                <div class="col-8">
-                    <h1 class="service_header">Our Services</h1>
-                </div>
+            <div class="row p-0 m-0">
+                <h1 class="service_header">Our Services</h1>
+                <p>
+                    Plus PPA provides/offers full turn-key solutions and ODC
+                    services including, Specification, Architecture,
+                    Analog/Mixed Signal services, IP Design (SRAM, MRAM
+                    expertise), PPA optimization.. We have proven flows and
+                    methodologies with hands-on experience and expertise on
+                    leading EDA tools and techniques.
+                </p>
             </div>
-
-            <p>
-                Plus PPA provides/offers full turn-key solutions and ODC
-                services including, Specification, Architecture, Analog/Mixed
-                Signal services, IP Design (SRAM, MRAM expertise), PPA
-                optimization.. We have proven flows and methodologies with
-                hands-on experience and expertise on leading EDA tools and
-                techniques.
-            </p>
         </section>
 
         <section class="section_3 container mb-5">
@@ -99,7 +91,6 @@
                     <div class="card">
                         <div class="card-body align-items-center">
                             <img
-                                data-aos="flip-left"
                                 class="services_img"
                                 src="./assets/Turn key proj.jpg"
                                 alt=""
@@ -110,7 +101,7 @@
                 <div class="col-md-8 mt-5">
                     <h3 class="mb-3 mb-0">Turnkey Projects</h3>
                     <div class="border_1 mb-3"></div>
-                    <p data-aos="zoom-in-left">
+                    <p>
                         Scratch development and complete solution for
                         conventional and nonconventional requirements
                     </p>
@@ -119,7 +110,6 @@
                     <div class="card">
                         <div class="card-body align-items-center">
                             <img
-                                data-aos="flip-left"
                                 class="services_img"
                                 src="./assets/IP Porting.jpg"
                                 alt=""
@@ -130,7 +120,7 @@
                 <div class="col-md-8 mt-5">
                     <h3 class="mb-3 mb-0">IP Porting Projects</h3>
                     <div class="border_1 mb-3"></div>
-                    <p data-aos="zoom-in-left">
+                    <p>
                         Complete Solution for IP porting with feature enablement
                         and Meet PPA targets.
                     </p>
@@ -139,7 +129,6 @@
                     <div class="card">
                         <div class="card-body d-flex align-items-center">
                             <img
-                                data-aos="flip-left"
                                 class="services_img"
                                 src="./assets/IP Design.png"
                                 alt=""
@@ -150,7 +139,7 @@
                 <div class="col-md-8 mt-5">
                     <h3 class="mb-3 mb-0">IP Design Expertise</h3>
                     <div class="border_1 mb-3"></div>
-                    <p data-aos="zoom-in-left">
+                    <p>
                         Silicon Proven Design services for SRAM IP and MRAM IP.
                     </p>
                 </div>
@@ -158,7 +147,6 @@
                     <div class="card">
                         <div class="card-body d-flex align-items-center">
                             <img
-                                data-aos="flip-left"
                                 class="services_img"
                                 src="./assets/R & D projects.jpg"
                                 alt=""
@@ -169,7 +157,7 @@
                 <div class="col-md-8 mt-5">
                     <h3 class="mb-3 mb-0">R&D Projects</h3>
                     <div class="border_1 mb-3"></div>
-                    <p data-aos="zoom-in-left">
+                    <p>
                         SRAM research and development for aggressive PPA
                         requirements.
                     </p>
@@ -178,7 +166,6 @@
                     <div class="card">
                         <div class="card-body d-flex align-items-center">
                             <img
-                                data-aos="flip-left"
                                 class="services_img"
                                 src="./assets/PPA optimization.jpg"
                                 alt=""
@@ -189,7 +176,7 @@
                 <div class="col-md-8 mt-5">
                     <h3 class="mb-3 mb-0">PPA Optimization</h3>
                     <div class="border_1 mb-3"></div>
-                    <p data-aos="zoom-in-left">
+                    <p>
                         SRAM development with Innovative solutions for
                         Performance and Power optimization.
                     </p>
@@ -198,7 +185,6 @@
                     <div class="card">
                         <div class="card-body d-flex align-items-center">
                             <img
-                                data-aos="flip-left"
                                 class="services_img"
                                 src="./assets/Timing sign off.avif"
                                 alt=""
@@ -209,7 +195,7 @@
                 <div class="col-md-8 mt-5">
                     <h3 class="mb-3 mb-0">Timing Sign Off flow</h3>
                     <div class="border_1 mb-3"></div>
-                    <p data-aos="zoom-in-left">
+                    <p>
                         IP with custom and PNR blocks Timing sign Off (STA, GLS
                         and Dynamic Timing) solution with industry standard
                         Tools.
@@ -218,9 +204,9 @@
             </div>
         </section>
 
-        <footer class="p-5">
+        <footer class="px-5">
             <div class="row justify-content-around">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-5 mt-5">
                     <img class="logo" src="./assets/ppa_footer_logo.jpg" />
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
@@ -250,7 +236,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 mb-5 mt-5">
                     <h3>Links</h3>
                     <ul>
                         <li>
@@ -274,7 +260,7 @@
                     </ul>
                 </div>
 
-                <form id="emailForm" class="col-md-4">
+                <form id="emailForm" class="col-md-4 mb-5 mt-5">
                     <h3>CONTACT US</h3>
 
                     <div class="mb-3">
@@ -311,10 +297,7 @@
             </div>
         </footer>
 
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
-            AOS.init();
-
             document.addEventListener("DOMContentLoaded", function () {
                 var emailForm = document.getElementById("emailForm");
 
