--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,8 @@
 
         <section class="section_1">
             <div class="row justify-content-end p-0 m-0">
-                <form class="col-6 form me-5" id="emailForm">
+
+                <form class="col-md-6 form p-5" id="emailForm">
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
                         <span class="">
@@ -80,7 +81,7 @@
                     <div class="mt-3">
                         <i class="fa-solid fa-envelope me-1"></i>
                         <a
-                            style="text-decoration: none; color: black"
+                            style="text-decoration: none; color: white"
                             href="mailto:Info@plus-ppa.com"
                         >
                             Info@plus-ppa.com
@@ -90,7 +91,7 @@
                         <i class="fa-solid fa-phone-volume me-1"></i>
 
                         <a
-                            style="text-decoration: none; color: black"
+                            style="text-decoration: none; color: white"
                             href="tel:9606468744"
                         >
                             +(91) 9606468744
@@ -120,7 +121,9 @@
                         ></textarea>
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-dark">Send</button>
+                        <button type="submit" class="btn btn-light">
+                            Send
+                        </button>
                     </div>
                 </form>
             </div>
