--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet"
         />
     </head>
@@ -69,7 +69,6 @@
 
         <section class="section_1">
             <div class="row justify-content-end p-0 m-0">
-
                 <form class="col-md-6 form p-5" id="emailForm">
                     <div class="mt-3 d-flex align-items-center">
                         <i class="fa-solid fa-location-dot me-4"></i>
